--- a/routerapp/package.json
+++ b/routerapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "githubapp",
+  "name": "routerapp",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "ag-grid-community": "^30.1.0",
-    "ag-grid-react": "^30.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
